--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,8 @@
                 <div class="brand ng-cloak" ng-cloak>
                     <a href=".">
                         <span>{{profile.firstname}}</span>
-                        <span>{{profile.lastname}}</span>
+                        <!--<span>{{profile.lastname}}</span>-->
+                        <span>Azurový</span>
                     </a>
                 </div>
             </div>
